- show warning message when shadow causes exception followed by disabling shadow - fix problem with windows x not exiting when there is a crash in Ardor3D - make it work with lwjgl - do not update window size when maximized or state changed - save window location in registry - remove house parts with invalid points from scene before saving and after opening - re-enable the window constrain check code to prevent windows from being dragging too close to wall
git-svn-id: http://svn.concord.org/svn/projects/trunk/common/java/simulations/Energy3D@25585 6e01202a-0783-4428-890a-84243c50cc2b